# bio-refusal-classifier

./: .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  writeup.txt
dashboard/: README.md  app.js  build_data.py  data.js  index.html  styles.css  template.html
outputs/: question_summaries.json
outputs/balanced_easy__all-minilm-l6-v2__seed42/: classification_report.txt  config.json  false_negatives.csv  false_positives.csv  metrics.json  predictions.csv
outputs/balanced_hard__all-minilm-l6-v2__seed42/: classification_report.txt  config.json  false_negatives.csv  false_positives.csv  metrics.json  predictions.csv
outputs/imbalanced_easy__all-minilm-l6-v2__seed42/: classification_report.txt  config.json  false_negatives.csv  false_positives.csv  metrics.json  predictions.csv
outputs/imbalanced_hard__all-minilm-l6-v2__seed42/: classification_report.txt  config.json  false_negatives.csv  false_positives.csv  metrics.json  predictions.csv
outputs/splits/: global_splits__seed42__fracs0.8-0.1-0.1.json
plans/: 001_v1_baseline_scaffold.md  002_swap_dolly_for_mmlu_non_bio.md
scripts/: run_experiment.py
src/: config.py  data.py  evaluate.py  experiments.py  models.py  train.py  utils.py
